# claude-setup

./: .gitignore  .mcp.json.example  CLAUDE.md  PLAN.md  README.md
.claude/commands/: check-outdated.md  clarify.md  create-pr.md  help-kr.md  start-phase.md  verify-phase.md
.claude/commands/docs/: check-outdated.md  sync-docs.md
.claude/commands/workflow/: clarify.md  create-pr.md  end-phase.md  new-feature.md  review-phase.md  start-phase.md
.claude/hooks/: session-end-mark-interrupted.sh
.claude/rules/: etc.md  git.md  quality.md  ssot.md  testing.md
.claude/skills/alembic-migrations/: README_KR.md  SKILL.md
.claude/skills/analyze-plan/: SKILL.md
.claude/skills/backend-tdd-workflow/: README_KR.md  SKILL.md
.claude/skills/committing-changes/: README_KR.md
.claude/skills/creating-pull-requests/: README_KR.md
.claude/skills/daily-review/: SKILL.md
.claude/skills/experiment/: SKILL.md
.claude/skills/fastapi-patterns/: README_KR.md  SKILL.md
.claude/skills/frontend-ui-testing/: README_KR.md  SKILL.md
.claude/skills/git-branching/: README_KR.md  SKILL.md
.claude/skills/insight-queue/: pyproject.toml
.claude/skills/insight-queue/src/insight_queue/: cli.py
.claude/skills/lessons/: SKILL.md
.claude/skills/managing-python-deps/: README_KR.md  SKILL.md
.claude/skills/multi/: SKILL.md
.claude/skills/nextjs-rsc-patterns/: README_KR.md  SKILL.md
.claude/skills/pr-splitting-strategy/: SKILL.md
.claude/skills/project-init/: SKILL.md  agent-development.md  (+1 more)
skills/research/: SKILL.md  article-crawler.md  paper-scout.md  repo-analyst.md
(+47 files in other folders)
